# dramarec

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
backend/: Dockerfile  pyproject.toml
backend/api/: main.py
backend/app/: config.py  db.py  models.py  recommend.py
backend/pipeline/: embed.py  evaluate.py  ingest.py  seed.py  tmdb_client.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/actor/[id]/: page.tsx
frontend/src/app/api/[...path]/: route.ts
frontend/src/app/show/[id]/: page.tsx
frontend/src/components/: ActorAvatar.tsx  CastRow.tsx  FeatureCard.tsx  Footer.tsx  ForYou.tsx  Header.tsx  HeroIntro.tsx  LikeButton.tsx  PosterPlaceholder.tsx  RecommendationStage.tsx  SearchTrigger.tsx  ShowCard.tsx  ThemeToggle.tsx  TrailerButton.tsx
frontend/src/lib/: api.ts  taste.tsx
